--- a/src/styles/components/Debugger.module.css
+++ b/src/styles/components/Debugger.module.css
@@ -63,6 +63,12 @@
   color: #fff;
 }
 
+.warning {
+  margin: 4px 0 0 0;
+  font-size: 12px;
+  color: #f59e0b;
+}
+
 .closeButton {
   background: none;
   border: none;
