--- a/src/styles/components/Debugger.module.css
+++ b/src/styles/components/Debugger.module.css
@@ -43,7 +43,7 @@
   border: 1px solid #444;
   border-radius: 8px;
   width: 90%;
-  max-width: 600px;
+  max-width: 37.5rem;
   max-height: 85vh;
   display: flex;
   flex-direction: column;
