--- a/src/styles/components/InfoTooltip.module.css
+++ b/src/styles/components/InfoTooltip.module.css
@@ -14,6 +14,7 @@
   margin-left: 0.4rem;
   cursor: pointer;
   color: rgba(255, 255, 255, 0.6);
+  font-weight: normal;
   transition: color 0.2s ease;
 }
 
@@ -35,6 +36,9 @@
   font-size: 0.875rem;
   line-height: 1.6;
   text-align: left;
+  text-transform: none;
+  letter-spacing: normal;
+  font-weight: normal;
   pointer-events: none;
   opacity: 0;
   visibility: hidden;
